[gd_scene load_steps=4 format=3 uid="uid://c3pj2c160gtv8"]

[ext_resource type="Script" uid="uid://dckqg6f37b0q4" path="res://third_player.gd" id="1_8b8sf"]
[ext_resource type="PackedScene" uid="uid://cj2ly5jodu5h2" path="res://exported-model.glb" id="1_sedoy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8b8sf"]

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_8b8sf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8b8sf")

[node name="exported-model" parent="." instance=ExtResource("1_sedoy")]

[node name="Skeleton3D" parent="exported-model/Skinned Mesh 0" index="0"]
bones/1/position = Vector3(0.018844549, 0.056567993, 0.8286465)
bones/1/rotation = Quaternion(0.81892234, -0.03142271, 0.03664341, 0.5718708)
bones/2/rotation = Quaternion(-0.06470277, 9.735105e-08, -2.315465e-08, 0.9979046)
bones/3/rotation = Quaternion(0.015878918, 0.0880022, -0.03113385, 0.995507)
bones/4/rotation = Quaternion(0.26321945, 0.27007076, 0.023364844, 0.925868)
bones/5/rotation = Quaternion(-0.066845015, -0.18660796, -0.002393381, 0.9801548)
bones/7/rotation = Quaternion(-0.12437133, -0.18450661, 0.028029284, 0.9745273)
bones/9/rotation = Quaternion(-0.6172509, -0.32083952, -0.3316693, 0.63722754)
bones/10/rotation = Quaternion(-0.17932476, 0.7092962, -0.3898139, 0.5592733)
bones/11/rotation = Quaternion(0.6382257, 0.10634947, -0.02904148, 0.7619149)
bones/12/rotation = Quaternion(0.11670915, -0.0029166422, -0.044778865, 0.992152)
bones/13/rotation = Quaternion(0.4451911, 0.5493687, -0.44519404, 0.54936445)
bones/14/rotation = Quaternion(0.62334144, -5.1649374e-07, 1.7501061e-07, 0.7819497)
bones/15/rotation = Quaternion(0.62334114, 4.7641535e-09, -2.4773357e-07, 0.78195)
bones/17/rotation = Quaternion(0.43208998, 0.5386997, -0.4580464, 0.5597271)
bones/18/rotation = Quaternion(0.6233416, 0.00094329927, 0.0011837039, 0.78194827)
bones/19/rotation = Quaternion(0.6233411, -0.00070422306, -0.0008834577, 0.7819493)
bones/21/rotation = Quaternion(0.50405705, 0.5115415, -0.43515173, 0.54304224)
bones/22/rotation = Quaternion(0.6231636, -0.020061629, 0.014925718, 0.78169173)
bones/23/rotation = Quaternion(0.6233416, 0.00038004195, 0.00047649987, 0.7819494)
bones/25/rotation = Quaternion(0.4353397, 0.5413561, -0.4549039, 0.55720323)
bones/26/rotation = Quaternion(0.62334186, 7.3613332e-06, 9.499284e-06, 0.7819494)
bones/27/rotation = Quaternion(0.62334114, -0.0006652106, -0.0008342681, 0.7819493)
bones/29/rotation = Quaternion(0.29083893, 0.949649, 0.11458366, 0.02121704)
bones/30/rotation = Quaternion(0.2193903, 0.023802465, -0.0053051906, 0.9753324)
bones/31/rotation = Quaternion(0.68738836, -0.00030975972, -0.00044552184, 0.72628987)
bones/33/rotation = Quaternion(-0.6040205, 0.34510282, 0.35671762, 0.623551)
bones/34/rotation = Quaternion(-0.002589762, 0.6675711, -0.5224932, -0.5304178)
bones/35/rotation = Quaternion(0.68986976, 0.28330222, -0.24102676, 0.62106824)
bones/36/rotation = Quaternion(0.19062184, -0.039129302, 0.045610256, 0.9798224)
bones/37/rotation = Quaternion(0.44519055, -0.54936916, 0.44519353, 0.5493648)
bones/38/rotation = Quaternion(0.6233419, 8.9774466e-07, -7.3970733e-07, 0.7819494)
bones/39/rotation = Quaternion(0.62334144, 1.24239e-07, 1.0743054e-06, 0.78194976)
bones/41/rotation = Quaternion(0.43208998, -0.5386996, 0.4580467, 0.55972695)
bones/42/rotation = Quaternion(0.62334085, -0.00094323244, -0.0011839538, 0.7819488)
bones/43/rotation = Quaternion(0.6233416, 0.0007044027, 0.0008835097, 0.78194886)
bones/45/rotation = Quaternion(0.50405747, -0.51154155, 0.43515137, 0.5430421)
bones/46/rotation = Quaternion(0.62316316, 0.02006193, -0.014925724, 0.781692)
bones/47/rotation = Quaternion(0.6233416, -0.00037937754, -0.00047679513, 0.7819494)
bones/49/rotation = Quaternion(0.43533966, -0.54135615, 0.4549035, 0.5572035)
bones/50/rotation = Quaternion(0.62334234, -6.8272557e-06, -9.98484e-06, 0.78194916)
bones/51/rotation = Quaternion(0.62334114, 0.0006656505, 0.0008347602, 0.7819493)
bones/53/rotation = Quaternion(-0.2908378, 0.9496492, 0.114584416, -0.021217465)
bones/54/rotation = Quaternion(0.21939091, -0.023802452, 0.005305103, 0.97533226)
bones/55/rotation = Quaternion(0.6873878, 0.0003084611, 0.00044470397, 0.72629035)
bones/57/rotation = Quaternion(0.8845645, -0.04952188, 0.0061060796, 0.46374124)
bones/58/rotation = Quaternion(0.0026411526, -0.0012220793, -6.3669877e-06, 0.9999958)
bones/59/rotation = Quaternion(-0.48845288, 0.023229053, 0.04674185, 0.8710279)
bones/60/rotation = Quaternion(-0.00013701346, 0.9643067, -0.26478735, -0.00049965637)
bones/62/rotation = Quaternion(0.9833163, -0.04211533, 0.005192782, -0.17688568)
bones/63/rotation = Quaternion(0.41868106, -0.009405763, 0.0043260935, 0.9080744)
bones/64/rotation = Quaternion(-0.42103717, 0.02221997, -0.011145772, 0.90670276)
bones/65/rotation = Quaternion(-0.00013714866, 0.96430665, -0.26478758, -0.000499547)

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0.5, 0)
spring_length = 1.9

[node name="Camera3D" type="Camera3D" parent="Node3D/SpringArm3D"]

[node name="DebugCanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="PanelContainer" parent="DebugCanvasLayer"]
offset_right = 180.0
offset_bottom = 162.0

[node name="VBoxContainer" type="VBoxContainer" parent="DebugCanvasLayer/Panel"]
layout_mode = 2

[node name="DebugTitle" type="Label" parent="DebugCanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "DEBUG"
horizontal_alignment = 1

[node name="MovementSpeed" type="Label" parent="DebugCanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Movement Speed: X"

[node name="MovementDirection" type="Label" parent="DebugCanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Direction: (0, 0, 0)"

[node name="CameraPosition" type="Label" parent="DebugCanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Camera Pos: (0, 0, 0)"

[node name="PlayerTransform" type="Label" parent="DebugCanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Player Transform: (0, 0, 0)"

[editable path="exported-model"]
